updated dashboard with embedded bot.

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -12,7 +12,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#/Summary">Operations Portal</a>
+                <a class="navbar-brand" href="#/Summary">San Diego Airport Operations Portal</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -20,7 +20,7 @@
                         <a href="#/Summary">Summary</a>
                     </li>
                     <li ng-class="{ active: isActive('/Production') }">
-                        <a href="#/Production">Production</a>
+                        <a href="#/Production">Terminal 1</a>
                     </li>
                 </ul>
             </div>
